Add GET count of inactive users within a period API
